# Sentinel

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  DOCUMENTATION.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
cli/: __init__.py  main.py
docs/: contract.md  failure-modes.md  failure-playbook.md  graph-model.md  invariants.md  mental-model.md  performance.md  quickstart.md  versioning.md
examples/: test_execution_context.py  test_expectations.py  test_gemini_call.py  test_graph_ascii.py  test_graph_features.py  test_graph_unit.py  test_openai_call.py  test_phases_19_25.py
examples/ci/: github_actions.yml  pytest_example.py
phylax/: pyvenv.cfg
phylax/Scripts/: activate  activate.bat
sdk/: __init__.py  capture.py  context.py  decorator.py  graph.py  schema.py
sdk/adapters/: __init__.py  gemini.py  llama.py  openai.py
sdk/expectations/: __init__.py  evaluator.py  rules.py
sentinel/: pyvenv.cfg
sentinel/Scripts/: activate  activate.bat
server/: __init__.py  main.py
server/routes/: __init__.py  chat.py  replay.py  traces.py
server/storage/: __init__.py  files.py  sqlite.py
tests/: __init__.py  test_context.py  test_contract.py  test_expectations.py  test_schema.py
ui/: app.js  index.html
